# PersonalMailClient

./: .env  .env.example  .eslintrc.cjs  .gitignore  FLICKERING_FIXES.md  README.md  SIDEBAR_NAVIGATION.md  VIEWS.md  WEBMAIL_GROUPING.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.tsc-out/: App.js  main.js  tsconfig.app.tsbuildinfo
_work/milestone1/: 1.md  goal.md
src/: App.js  App.tsx  index.css  main.tsx  theme.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  llm.rs  main.rs  models.rs  remote_delete.rs  storage.rs
src-tauri/src/providers/: imap.rs  mod.rs
src/components/: AccountForm.tsx  AccountList.tsx  AccountStatusBanner.tsx  AccountsView.tsx  AppBar.tsx  AutomationPanel.tsx  AutomationView.tsx  BlockedDomainsView.tsx  BlockedSendersView.tsx  BulkAnalysisPanel.tsx  ConnectionWizard.tsx  CustomRenderers.tsx  DeletedEmailsView.tsx  EmailActionDropdown.tsx  EmailList.tsx  EmailListContainer.tsx  GlobalProgressBar.tsx  LlmAssistantView.tsx  LlmChatPanel.tsx  LlmSidebar.tsx  Mailbox.tsx  MessageList.tsx  MessageModalErrorBoundary.tsx  MessagePreview.tsx  MessageToolbar.tsx  ModalFooter.tsx  NavigationDrawer.tsx  NotificationsHost.tsx  RemoteDeleteMonitor.tsx  RemoteDeleteProgress.tsx  SavedAccountsDialog.tsx  SenderGrid.tsx  SenderMessagesModal.tsx  SettingsView.tsx  StatusBanner.tsx  SyncControls.tsx  SyncSummary.tsx  ViewRouter.tsx  VirtualizedMessageList.tsx  WebMailView.tsx  (+2 more)
src/components/email/: EmailDetailPanel.tsx
src/components/mailgrid/: GroupingToggle.tsx  MailGridContainer.tsx
src/hooks/: useAccountManagement.ts  useAppState.ts  useAutomationState.ts  useEmailState.ts  useLlmSettings.ts  useMessageModalState.ts  useRemoteDeleteOperations.ts  useSyncOperations.ts  useUIState.ts
src/services/: accounts.ts
src/stores/: accountsStore.tsx  bulkAnalysisStore.tsx  notifications.tsx  statusDialog.tsx
src/utils/: mailboxStatus.ts  validation.ts
