[package]
name = "personal-mail-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
imap = "2.4"
imap-proto = "0.10"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tauri = { version = "1.5", features = [
  "api-all"
] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "fs", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
