[package]
name = "personal-mail-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
imap = "2.4"
imap-proto = "0.10"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tauri = { version = "1.5", features = [
  "api-all"
] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "fs", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
warp = "0.3"
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
base64 = "0.22"
secrecy = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1.19"
parking_lot = "0.12"
hex = "0.4"
keyring = "2"
llama_cpp = { version = "0.3.2", features = ["metal"] }
mailparse = "0.13"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
